text align cart span fixed

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ footer {
 
 .cart-container {
     overflow-y: auto;
-    max-height: 70vh;
+    max-height: 48vh;
     display: flex;
     flex-direction: column;
 }
@@ -301,6 +301,11 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.cart-container-price span:first-child {
+    text-align: end;
+    width: 63px;
 }
 
 .secondary {
